clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__bitfld_7.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/bitfld-7.c" (c, x86_64-unknown-linux-gnu)
global u : rec_U = ConstRecord { ty: Named("rec_U"), members: Array([CirInt { ty: Named("s32i"), value: "305419896" }]) } [internal, default, align 4, dso_local]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = get_global @u : rec_U*
        get_member
        get_bitfield
        %5 = cast(integral) %4 : s32i
        %6 = const 3430008 : s32i
        sub
        store %7, %0
        %8 = load %0 : s32i
        return %8
    ^bb1:
        %9 = const 0 : s32i
        store %9, %0
        %10 = load %0 : s32i
        return %10
}
