clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__bitops_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/bitops-1.c" (c, x86_64-unknown-linux-gnu)
global values : s32i[8] = [0, 1, 2, 3, -1, -2, -3, 65664] [external, default, align 16, dso_local]
global numvalues : s32i = 8 [external, default, align 4, dso_local]

fn h0(%arg10: s32i, %arg11: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg10: s32i, %arg11: s32i):
        %108 = alloca s32i, "A", align 4
        %109 = alloca s32i, "B", align 4
        %110 = alloca s32i, "__retval", align 4
        store %arg10, %108
        store %arg11, %109
        %111 = load %108 : s32i, align 4
        %112 = load %109 : s32i, align 4
        %113 = or %111, %112 : s32i
        %114 = load %108 : s32i, align 4
        %115 = load %109 : s32i, align 4
        %116 = cmp eq %114, %115 : bool
        %117 = cast(bool_to_int) %116 : s32i
        %118 = and %113, %117 : s32i
        store %118, %110
        %119 = load %110 : s32i
        return %119
}
fn i0(%arg8: s32i, %arg9: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg8: s32i, %arg9: s32i):
        %98 = alloca s32i, "A", align 4
        %99 = alloca s32i, "B", align 4
        %100 = alloca s32i, "__retval", align 4
        store %arg8, %98
        store %arg9, %99
        %101 = load %98 : s32i, align 4
        %102 = load %98 : s32i, align 4
        %103 = load %99 : s32i, align 4
        %104 = cmp eq %102, %103 : bool
        %105 = cast(bool_to_int) %104 : s32i
        %106 = or %101, %105 : s32i
        store %106, %100
        %107 = load %100 : s32i
        return %107
}
fn k0(%arg6: s32i, %arg7: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg6: s32i, %arg7: s32i):
        %86 = alloca s32i, "A", align 4
        %87 = alloca s32i, "B", align 4
        %88 = alloca s32i, "__retval", align 4
        store %arg6, %86
        store %arg7, %87
        %89 = load %86 : s32i, align 4
        %90 = load %87 : s32i, align 4
        %91 = and %89, %90 : s32i
        %92 = load %86 : s32i, align 4
        %93 = load %87 : s32i, align 4
        %94 = cmp eq %92, %93 : bool
        %95 = cast(bool_to_int) %94 : s32i
        %96 = or %91, %95 : s32i
        store %96, %88
        %97 = load %88 : s32i
        return %97
}
fn h1(%arg4: s32i, %arg5: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg4: s32i, %arg5: s32i):
        %74 = alloca s32i, "A", align 4
        %75 = alloca s32i, "B", align 4
        %76 = alloca s32i, "__retval", align 4
        store %arg4, %74
        store %arg5, %75
        %77 = load %74 : s32i, align 4, volatile
        %78 = load %75 : s32i, align 4, volatile
        %79 = or %77, %78 : s32i
        %80 = load %74 : s32i, align 4, volatile
        %81 = load %75 : s32i, align 4, volatile
        %82 = cmp eq %80, %81 : bool
        %83 = cast(bool_to_int) %82 : s32i
        %84 = and %79, %83 : s32i
        store %84, %76
        %85 = load %76 : s32i
        return %85
}
fn i1(%arg2: s32i, %arg3: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s32i, %arg3: s32i):
        %64 = alloca s32i, "A", align 4
        %65 = alloca s32i, "B", align 4
        %66 = alloca s32i, "__retval", align 4
        store %arg2, %64
        store %arg3, %65
        %67 = load %64 : s32i, align 4, volatile
        %68 = load %64 : s32i, align 4, volatile
        %69 = load %65 : s32i, align 4, volatile
        %70 = cmp eq %68, %69 : bool
        %71 = cast(bool_to_int) %70 : s32i
        %72 = or %67, %71 : s32i
        store %72, %66
        %73 = load %66 : s32i
        return %73
}
fn k1(%arg0: s32i, %arg1: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i):
        %52 = alloca s32i, "A", align 4
        %53 = alloca s32i, "B", align 4
        %54 = alloca s32i, "__retval", align 4
        store %arg0, %52
        store %arg1, %53
        %55 = load %52 : s32i, align 4, volatile
        %56 = load %53 : s32i, align 4, volatile
        %57 = and %55, %56 : s32i
        %58 = load %52 : s32i, align 4, volatile
        %59 = load %53 : s32i, align 4, volatile
        %60 = cmp eq %58, %59 : bool
        %61 = cast(bool_to_int) %60 : s32i
        %62 = or %57, %61 : s32i
        store %62, %54
        %63 = load %54 : s32i
        return %63
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %3 = alloca s32i, "A", align 4
        %4 = const 0 : s32i
        store %4, %3, align 4
        for cond: {
            %48 = load %3 : s32i, align 4
            %49 = get_global @numvalues : s32i*
            %50 = load %49 : s32i, align 4
            %51 = cmp lt %48, %50 : bool
            condition %51
        } step: {
            %5 = load %3 : s32i, align 4
            %6 = inc %5 : s32i [nsw]
            store %6, %3, align 4
            yield
        } do {
            scope {
                %7 = alloca s32i, "B", align 4
                %8 = const 0 : s32i
                store %8, %7, align 4
                for cond: {
                    %44 = load %7 : s32i, align 4
                    %45 = get_global @numvalues : s32i*
                    %46 = load %45 : s32i, align 4
                    %47 = cmp lt %44, %46 : bool
                    condition %47
                } step: {
                    %9 = load %7 : s32i, align 4
                    %10 = inc %9 : s32i [nsw]
                    store %10, %7, align 4
                    yield
                } do {
                    scope {
                        %11 = alloca s32i, "a", align 4
                        %12 = alloca s32i, "b", align 4
                        %13 = load %3 : s32i, align 4
                        %14 = cast(integral) %13 : s64i
                        %15 = get_global @values : s32i[8]*
                        %16 = get_element %15[%14] : s32i*
                        %17 = load %16 : s32i, align 4
                        store %17, %11, align 4
                        %18 = load %7 : s32i, align 4
                        %19 = cast(integral) %18 : s64i
                        %20 = get_global @values : s32i[8]*
                        %21 = get_element %20[%19] : s32i*
                        %22 = load %21 : s32i, align 4
                        store %22, %12, align 4
                        scope {
                            %37 = load %11 : s32i, align 4
                            %38 = load %12 : s32i, align 4
                            %39 = call @h0(%37, %38) : s32i [all]
                            %40 = load %11 : s32i, align 4
                            %41 = load %12 : s32i, align 4
                            %42 = call @h1(%40, %41) : s32i [all]
                            %43 = cmp ne %39, %42 : bool
                            if %43 {
                                call @abort() [all]
                                yield
                            }
                            yield
                        }
                        scope {
                            %30 = load %11 : s32i, align 4
                            %31 = load %12 : s32i, align 4
                            %32 = call @i0(%30, %31) : s32i [all]
                            %33 = load %11 : s32i, align 4
                            %34 = load %12 : s32i, align 4
                            %35 = call @i1(%33, %34) : s32i [all]
                            %36 = cmp ne %32, %35 : bool
                            if %36 {
                                call @abort() [all]
                                yield
                            }
                            yield
                        }
                        scope {
                            %23 = load %11 : s32i, align 4
                            %24 = load %12 : s32i, align 4
                            %25 = call @k0(%23, %24) : s32i [all]
                            %26 = load %11 : s32i, align 4
                            %27 = load %12 : s32i, align 4
                            %28 = call @k1(%26, %27) : s32i [all]
                            %29 = cmp ne %25, %28 : bool
                            if %29 {
                                call @abort() [all]
                                yield
                            }
                            yield
                        }
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        yield
    }
    %2 = load %0 : s32i
    return %2
}
