clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__bswap_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/bswap-1.c" (c, x86_64-unknown-linux-gnu)
fn g(%arg1: u64i) -> u64i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg1: u64i):
        %117 = alloca u64i, "a", align 8
        %118 = alloca u64i, "__retval", align 8
        store %arg1, %117
        %119 = load %117 : u64i, align 8
        %120 = byte_swap %119 : u64i
        store %120, %118
        %121 = load %118 : u64i
        return %121
}
fn f(%arg0: u64i) -> u64i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: u64i):
        %52 = alloca u64i, "c", align 8
        %53 = alloca u64i, "__retval", align 8
        %54 = alloca rec_anon2E0, "a", align 8
        %55 = alloca rec_anon2E0, "b", align 8
        store %arg0, %52
        %56 = load %52 : u64i, align 8
        %57 = get_member %54[0] "a" : u64i*
        store %56, %57, align 8
        %58 = const 7 : s64i
        %59 = get_member %54[1] "b" : u8i[8]*
        %60 = get_element %59[%58] : u8i*
        %61 = load %60 : u8i, align 1
        %62 = const 0 : s64i
        %63 = get_member %55[1] "b" : u8i[8]*
        %64 = get_element %63[%62] : u8i*
        store %61, %64, align 8
        %65 = const 6 : s64i
        %66 = get_member %54[1] "b" : u8i[8]*
        %67 = get_element %66[%65] : u8i*
        %68 = load %67 : u8i, align 2
        %69 = const 1 : s64i
        %70 = get_member %55[1] "b" : u8i[8]*
        %71 = get_element %70[%69] : u8i*
        store %68, %71, align 1
        %72 = const 5 : s64i
        %73 = get_member %54[1] "b" : u8i[8]*
        %74 = get_element %73[%72] : u8i*
        %75 = load %74 : u8i, align 1
        %76 = const 2 : s64i
        %77 = get_member %55[1] "b" : u8i[8]*
        %78 = get_element %77[%76] : u8i*
        store %75, %78, align 2
        %79 = const 4 : s64i
        %80 = get_member %54[1] "b" : u8i[8]*
        %81 = get_element %80[%79] : u8i*
        %82 = load %81 : u8i, align 4
        %83 = const 3 : s64i
        %84 = get_member %55[1] "b" : u8i[8]*
        %85 = get_element %84[%83] : u8i*
        store %82, %85, align 1
        %86 = const 3 : s64i
        %87 = get_member %54[1] "b" : u8i[8]*
        %88 = get_element %87[%86] : u8i*
        %89 = load %88 : u8i, align 1
        %90 = const 4 : s64i
        %91 = get_member %55[1] "b" : u8i[8]*
        %92 = get_element %91[%90] : u8i*
        store %89, %92, align 4
        %93 = const 2 : s64i
        %94 = get_member %54[1] "b" : u8i[8]*
        %95 = get_element %94[%93] : u8i*
        %96 = load %95 : u8i, align 2
        %97 = const 5 : s64i
        %98 = get_member %55[1] "b" : u8i[8]*
        %99 = get_element %98[%97] : u8i*
        store %96, %99, align 1
        %100 = const 1 : s64i
        %101 = get_member %54[1] "b" : u8i[8]*
        %102 = get_element %101[%100] : u8i*
        %103 = load %102 : u8i, align 1
        %104 = const 6 : s64i
        %105 = get_member %55[1] "b" : u8i[8]*
        %106 = get_element %105[%104] : u8i*
        store %103, %106, align 2
        %107 = const 0 : s64i
        %108 = get_member %54[1] "b" : u8i[8]*
        %109 = get_element %108[%107] : u8i*
        %110 = load %109 : u8i, align 8
        %111 = const 7 : s64i
        %112 = get_member %55[1] "b" : u8i[8]*
        %113 = get_element %112[%111] : u8i*
        store %110, %113, align 1
        %114 = get_member %55[0] "a" : u64i*
        %115 = load %114 : u64i, align 8
        store %115, %53
        %116 = load %53 : u64i
        return %116
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca u64i, "i", align 8
    %2 = const 0 : s32i
    store %2, %0
    scope {
        %45 = const 8 : u64i
        %46 = const 1 : u64i
        %47 = const 8 : u64i
        %48 = mul %46, %47 : u64i
        %49 = cmp ne %45, %48 : bool
        if %49 {
            %50 = const 0 : s32i
            store %50, %0
            %51 = load %0 : s32i
            return %51
        }
        yield
    }
    scope {
        %40 = const 18 : u64i
        %41 = call @f(%40) : u64i [all]
        %42 = const 18 : u64i
        %43 = call @g(%42) : u64i [all]
        %44 = cmp ne %41, %43 : bool
        if %44 {
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %35 = const 4660 : u64i
        %36 = call @f(%35) : u64i [all]
        %37 = const 4660 : u64i
        %38 = call @g(%37) : u64i [all]
        %39 = cmp ne %36, %38 : bool
        if %39 {
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %30 = const 1193046 : u64i
        %31 = call @f(%30) : u64i [all]
        %32 = const 1193046 : u64i
        %33 = call @g(%32) : u64i [all]
        %34 = cmp ne %31, %33 : bool
        if %34 {
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %25 = const 305419896 : u64i
        %26 = call @f(%25) : u64i [all]
        %27 = const 305419896 : u64i
        %28 = call @g(%27) : u64i [all]
        %29 = cmp ne %26, %28 : bool
        if %29 {
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %20 = const 78187493520 : u64i
        %21 = call @f(%20) : u64i [all]
        %22 = const 78187493520 : u64i
        %23 = call @g(%22) : u64i [all]
        %24 = cmp ne %21, %23 : bool
        if %24 {
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %15 = const 20015998341138 : u64i
        %16 = call @f(%15) : u64i [all]
        %17 = const 20015998341138 : u64i
        %18 = call @g(%17) : u64i [all]
        %19 = cmp ne %16, %18 : bool
        if %19 {
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %10 = const 5124095575331380 : u64i
        %11 = call @f(%10) : u64i [all]
        %12 = const 5124095575331380 : u64i
        %13 = call @g(%12) : u64i [all]
        %14 = cmp ne %11, %13 : bool
        if %14 {
            call @abort() [all]
            yield
        }
        yield
    }
    scope {
        %5 = const 1311768467284833366 : u64i
        %6 = call @f(%5) : u64i [all]
        %7 = const 1311768467284833366 : u64i
        %8 = call @g(%7) : u64i [all]
        %9 = cmp ne %6, %8 : bool
        if %9 {
            call @abort() [all]
            yield
        }
        yield
    }
    %3 = const 0 : s32i
    store %3, %0
    %4 = load %0 : s32i
    return %4
}
